# ipychat

./: README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/ipychat/: __version__.py  cli.py  config.py  magic.py  models.py
src/ipychat/providers/: __init__.py  anthropic.py  openai.py  sapgenaihub.py
src/nbchat/: __init__.py  cli.py  config.py  context.py  magic.py  models.py  ui.py
src/nbchat/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_magic.py  test_models.py  test_providers.py  test_ui.py
