[project]
name = "nbchat"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "Vinayak Mehta", email = "vmehta94@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "rich>=10.0.0",
    "questionary>=2.0.1",
    "openai>=1.0.0",
    "ipython<8.18.0",
    "anthropic>=0.5.0",
    "toml>=0.10.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/vinayak-mehta/nbchat"
Changelog = "https://github.com/vinayak-mehta/nbchat/releases"
Issues = "https://github.com/vinayak-mehta/nbchat/issues"
CI = "https://github.com/vinayak-mehta/nbchat/actions"

[project.scripts]
nbchat = "nbchat.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "twine",
    "build",
]
