[project]
name = "ipychat"
version = "0.3.9"
description = "The AI IPython"
readme = "README.md"
authors = [{name = "Vinayak Mehta", email = "vmehta94@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<4.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "rich>=10.0.0",
    "questionary>=2.0.1",
    "ipython<8.18.0",
    "toml>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.8.3",
    "generative-ai-hub-sdk[all] (>=4.3.1,<5.0.0)",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/vinayak-mehta/ipychat"
Changelog = "https://github.com/vinayak-mehta/ipychat/releases"
Issues = "https://github.com/vinayak-mehta/ipychat/issues"
CI = "https://github.com/vinayak-mehta/ipychat/actions"

[project.scripts]
ipychat = "ipychat.cli:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "twine",
    "build",
]
test = [
    "pandas",
    "numpy",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pandas = "^2.2.3"
ipykernel = "^6.29.5"

